# KrystalBall

./: .gitmodules  CMakeLists.txt  Dockerfile  ExampleSim.hpp  ModelList.hpp  ODESim.h  Pendulum.cpp  Pendulum.hpp  PendulumSim.cpp  PendulumSim.hpp  README.md  SimState.cpp  SimState.hpp  SimTime.cpp  SimTime.hpp  TemplateSimulator.h
ConfigParser/: ConfigParser.cpp  ConfigParser.hpp  Parser.cpp  Parser.hpp
Constants/: Constants.cpp  ConstantsSet.cpp  ConstantsSet.hpp
DataOutputter/: DataPrinter.cpp  DataPrinter.hpp
DiscreteModel/: DiscreteModel.cpp  DiscreteModel.hpp
DynamicModel/: DynamicModel.hpp
Examples/AdvectionEqn/: AdvectionEqn.cpp  AdvectionEqn.hpp  AdvectionEqnSim.cpp  AdvectionEqnSim.hpp
Examples/HeatEquation/: HeatEquation.hpp  HeatEquationSim.hpp
Examples/Hodgkin–Huxley/: HodgkinHuxleyNeuronModel.cpp  HodgkinHuxleyNeuronModel.hpp  NeuronSim.cpp  NeuronSim.hpp
Examples/NBodyProblem/: NBodySim.hpp
Examples/NonlinearTest/: NonlinearModel.hpp
Examples/Pendulum/: Pendulum.hpp  PendulumSim.hpp
ModelList/: ModelList.cpp  ModelList.hpp
ModelState/: ModelState.cpp  ModelState.hpp
NumericIntegration/: ExplicitEuler.cpp  ExplicitEuler.hpp  ExplicitTrapezoidal.cpp  ExplicitTrapezoidal.hpp  NumericIntegration.h  NumericIntegration.hpp  RungeKutta4.cpp  RungeKutta4.hpp
NumericIntegration/ButcherIntegrator/: ButcherIntegrator.cpp  ButcherIntegrator.hpp  ExplicitEuler.cpp  ExplicitTrapezoidal.hpp  RKCashKarp.cpp  RKCashKarp.hpp  RungeKutta4.cpp  RungeKutta4.hpp
NumericIntegration/ButcherTable/: ButcherTable.cpp  ButcherTable.hpp
OverallSimState/: SimState.hpp
PreciseTime/: PreciseTime.h
Scheduler/: Scheduler.hpp
Simulator/: Simulator.cpp  Simulator.hpp  Simulator_Impl.hpp
old/docs/: QuickGuide.html  QuickGuide.md
old/src_v2/: KrystallBall.sln
old/src_v2/KrystallBall/: KrystallBall.vcxproj  KrystallBall.vcxproj.filters  kb_base_integration.hpp  kb_c_differential_model.h  kb_explicit_euler.hpp  kb_monte_carlo_method.hpp  kb_rk4_crtp.hpp  kb_simulator_ctdiffeq.hpp  kb_simulator_polymorphism.hpp  kb_test_pendulum_dyn_ctdq.hpp  kb_test_pendulum_sim.hpp  kb_writer.hpp
src/: CMakeLists.txt
src/Constants/: Constants.cpp  Constants.hpp
src/DataOutputter/: DataPrinter.cpp  DataPrinter.hpp
src/DiscreteModel/: DiscreteModel.cpp  DiscreteModel.hpp
src/DynamicModel/: DynamicModel.cpp  DynamicModel.hpp
src/Examples/AdvectionEqn/: AdvectionEqnSim.hpp
src/Examples/HeatEquation/: HeatEquation.cpp  HeatEquation.hpp  HeatEquationSim.cpp  HeatEquationSim.hpp
src/Examples/NBodyProblem/: NBodySim.hpp  PointBodyModel.cpp  PointBodyModel.hpp
src/Examples/Pendulum/: Pendulum.hpp  PendulumSim.hpp
src/ModelList/: ModelList.cpp
src/ModelState/: ModelState.cpp  ModelState.hpp
src/NumericIntegration/ButcherIntegrator/: ButcherIntegrator.cpp  ButcherIntegrator.hpp  ExplicitTrapezoidal.cpp  RKCashKarp.cpp
src/OverallSimState/: SimState.cpp  SimState.hpp  SimTime.cpp  SimTime.hpp
src/PreciseTime/: PreciseTime.h
src/Scheduler/: Scheduler.cpp  Scheduler.hpp
src/SimExceptions/: SimExceptions.hpp
src/Simulator/: Simulator.hpp  Simulator_Impl.hpp
src/shared/: FileWrap.cpp  FileWrap.hpp  PreciseTime.h  Timer.cpp
src/sim/: CMakeLists.txt
src/sim/runtime/: CMakeLists.txt  differential_model.h  discrete_model.cpp  discrete_model.h  discrete_simulator.h  scheduler.h  simulator.cpp  simulator.h
src/sim/util/monte_carlo_models/: CMakeLists.txt  fixed_monte_carlo_model.cpp  fixed_monte_carlo_model.h  monte_carlo_interface.h
src/sim/util/schedulers/: CMakeLists.txt  min_heap_scheduler.cpp  min_heap_scheduler.h  min_heap_scheduler_test.cpp  scheduler_interface.h
src/util/: CMakeLists.txt
src_v2/Debug/: KrystallBall.ilk
src_v2/KrystallBall/: kahan_number.hpp  kb_differential_model.hpp  kb_differential_model_crtp.hpp  kb_discrete_model.hpp  kb_event_handler_adapt.hpp  kb_event_handler_fast.hpp  kb_explicit_euler_crtp.hpp  kb_heap.hpp  kb_simulator.hpp  kb_simulator_polymorphism_ctdiffeq.hpp  kb_test_pendulum_dyn.hpp  kb_test_pendulum_sim_ctdq.hpp  kb_variadic_diffeq_bundle.hpp  main.cpp
src_v2/Release/: KrystallBall.iobj  KrystallBall.ipdb
tests/: CMakeLists.txt  misc_testing.cpp
(+140 files in other folders)
